@@ -9,8 +9,6 @@ this repository contains the full copyright notices and license terms. -->
             <field name="arch" type="xml">
                 <![CDATA[
                 <form string="Property">
-                    <label name="name"/>
-                    <field name="name" colspan="3"/>
                     <label name="field"/>
                     <field name="field" colspan="3"/>
                     <label name="value"/>
@@ -27,7 +25,6 @@ this repository contains the full copyright notices and license terms. -->
             <field name="arch" type="xml">
                 <![CDATA[
                 <tree string="Properties">
-                    <field name="name"/>
                     <field name="field"/>
                     <field name="value"/>
                     <field name="res"/>
